--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-collapsible": "^2.5.0",
     "react-dom": "16.4.0",
     "react-flow-player": "^1.1.9",
+    "react-particles-js": "^1.2.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
