--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsmpeg-player": "^2.1.5",
     "lodash": "^4.17.11",
     "m3u8-file-parser": "git+https://github.com/jsparrow2006/m3u8-file-parser.git#master",
+    "particles.js": "^2.0.0",
     "react": "16.4.0",
     "react-collapsible": "^2.5.0",
     "react-dom": "16.4.0",
